todo: 이미지 검사 로직 추가
Signed-off-by: mixedsider <dmstjd0812@gmail.com>